simplified website generation scripts